--- a/camisetas.html
+++ b/camisetas.html
@@ -7,6 +7,170 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
+<style>
+     body {
+        background-color: #adb5bd;
+    }
+    .card {
+        margin-bottom: 20px;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
+        transition: transform 0.2s;
+    }
+    .card:hover {
+        transform: scale(1.05);
+
+    }
+    .card-body {
+        text-align: center;
+        background-color: #f8f9fa;
+        border-radius: 0 0 10px 10px;
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);  
+    }
+    .card img {
+        height: 300px;
+        object-fit: cover;
+    }
+    .card-title {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+    .card-text {
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+
+    }
+    .btn-primary {
+        background-color: #007bff;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        font-size: 1rem;
+        transition: background-color 0.3s;
+    }
+    .btn-primary:hover {
+        background-color: #0056b3;
+        color: #fff;
+        text-decoration: none;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
+    }
+    .navbar {
+        margin-bottom: 20px;
+    }
+    .offcanvas-body {
+        background-color: #343a40;
+    }
+    .offcanvas-header {
+        border-bottom: 1px solid #495057;
+    }
+    .offcanvas-title {
+        color: #fff;
+    }
+    .offcanvas-body a {
+        color: #fff;
+    }
+    .offcanvas-body a:hover {
+        color: #007bff;
+        text-decoration: none;
+    }
+    .offcanvas-body .nav-link {
+        padding: 10px 15px;
+    }
+    .offcanvas-body .nav-link:hover {
+        background-color: #495057;
+        border-radius: 5px;
+    }
+    .offcanvas-body .dropdown-menu {
+        background-color: #343a40;
+    }
+    .offcanvas-body .dropdown-item {
+        color: #fff;
+    }
+    .offcanvas-body .dropdown-item:hover {
+        background-color: #495057;
+        color: #007bff;
+    }
+    .offcanvas-body .dropdown-toggle {
+        color: #fff;
+    }
+    .offcanvas-body .dropdown-toggle:hover {
+        color: #007bff;
+        text-decoration: none;
+    }
+    .offcanvas-body .form-control {
+        background-color: #495057;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+    }
+    .offcanvas-body .form-control:focus {
+        background-color: #495057;
+        color: #fff;
+        border: none;
+        box-shadow: none;
+    }
+    .offcanvas-body .btn-outline-success {
+        color: #fff;
+        border-color: #fff;
+    }
+    .offcanvas-body .btn-outline-success:hover {
+        background-color: #fff;
+        color: #343a40;
+        border-color: #fff;
+    }
+    .offcanvas-body .btn-outline-success:focus {
+        box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+    }
+    .footer {
+        background-color: #343a40;
+        color: #fff;
+        padding: 20px 0;
+    }
+    .footer p {
+        margin: 0;
+    }
+    .footer a {
+        color: #fff;
+        text-decoration: none;
+    }
+    .footer a:hover {
+        text-decoration: underline;
+    }
+    .footer .social-icons a {
+        margin: 0 10px;
+        color: #fff;
+        font-size: 1.5rem;
+    }
+    .footer .social-icons a:hover {
+        color: #007bff;
+    }
+    .footer .social-icons {
+        margin-top: 10px;
+    }
+    .footer .social-icons a {
+        margin: 0 10px;
+        color: #fff;
+        font-size: 1.5rem;
+    }
+    .footer .social-icons a:hover {
+        color: #007bff;
+    }
+    .footer .social-icons {
+        margin-top: 10px;
+    }
+    .footer .social-icons a {
+        margin: 0 10px;
+        color: #fff;
+        font-size: 1.5rem;
+    }
+    .footer .social-icons a:hover {
+        color: #007bff;
+    }
+</style>
 <body>
     <body>
         <nav class="navbar navbar-dark bg-dark fixed-top">
@@ -137,6 +301,7 @@
                 </div>
             </div>
         </div>
+        
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
