--- a/acessorios.html
+++ b/acessorios.html
@@ -12,6 +12,7 @@
     body {
         background-color: #adb5bd;
     }
+
     .card {
         margin-bottom: 20px;
         border: none;
@@ -19,32 +20,38 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
         transition: transform 0.2s;
     }
+
     .card:hover {
         transform: scale(1.05);
 
     }
+
     .card-body {
         text-align: center;
         background-color: #f8f9fa;
         border-radius: 0 0 10px 10px;
         padding: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);  
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.466);
     }
+
     .card img {
         height: 300px;
         object-fit: cover;
     }
+
     .card-title {
         font-size: 1.5rem;
         font-weight: bold;
         margin-bottom: 10px;
     }
+
     .card-text {
         font-size: 1.2rem;
         font-weight: bold;
         margin-bottom: 10px;
-        
+
     }
+
     .btn-primary {
         background-color: #007bff;
         border: none;
@@ -57,142 +64,109 @@
 
 <body>
 
-    <body>
-        <nav class="navbar navbar-dark bg-dark fixed-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">GeekStore</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                    aria-labelledby="offcanvasDarkNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">GeekStore</h5>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="parcerias.html">Parcerias</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Produtos
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
-                                    <li><a class="dropdown-item" href="funkopop.html">Funko pop</a></li>
-                                    <li><a class="dropdown-item" href="gamers.html">gamers</a></li>
-                                    <li><a class="dropdown-item" href="acessorios.html">acessórios</a></li>
-                                </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-                        </form>
+    <div id="menu"></div>
+    <script>
+        //carregar o conteudo do menu.html
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('menu').innerHTML = data;
+            })
+            .catch(error => console.error('Erro ao carregar o menu:', error));
+    </script>
+    <div class="container mt-5 pt-5">
+        <h1 class="text-center">Acessórios</h1>
+        <div class="row mt-4">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 1">
+                    <div class="card-body">
+                        <h5 class="card-title"># </h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
-        </nav>
-        <div class="container mt-5 pt-5">
-            <h1 class="text-center">Acessórios</h1>
-            <div class="row mt-4">
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 1">
-                        <div class="card-body">
-                            <h5 class="card-title"># </h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 2">
+                    <div class="card-body">
+                        <h5 class="card-title">#</h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 2">
-                        <div class="card-body">
-                            <h5 class="card-title">#</h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 3">
+                    <div class="card-body">
+                        <h5 class="card-title">#</h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 3">
-                        <div class="card-body">
-                            <h5 class="card-title">#</h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 4">
+                    <div class="card-body">
+                        <h5 class="card-title">#</h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 4">
-                        <div class="card-body">
-                            <h5 class="card-title">#</h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 5">
+                    <div class="card-body">
+                        <h5 class="card-title">#</h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 5">
-                        <div class="card-body">
-                            <h5 class="card-title">#</h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 6">
+                    <div class="card-body">
+                        <h5 class="card-title">#</h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 6">
-                        <div class="card-body">
-                            <h5 class="card-title">#</h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 7">
+                    <div class="card-body">
+                        <h5 class="card-title">#</h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 7">
-                        <div class="card-body">
-                            <h5 class="card-title">#</h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="Imagens/" class="card-img-top" alt="Acessórios 8">
-                        <div class="card-body">
-                            <h5 class="card-title">#</h5>
-                            <p class="card-text">#</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="Imagens/" class="card-img-top" alt="Acessórios 8">
+                    <div class="card-body">
+                        <h5 class="card-title">#</h5>
+                        <p class="card-text">#</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
         </div>
-  
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-            crossorigin="anonymous"></script>
-    </body>
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-        <p>Desenvolvido por Lucas</p>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+</body>
+<footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
+    <p>Desenvolvido por Lucas</p>
 
 </html>
