--- a/camisetas.html
+++ b/camisetas.html
@@ -136,12 +136,40 @@
             }
           </script>
         
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-        crossorigin="anonymous"></script>
+  <!-- Adicione isso antes da tag </body> -->
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>  
+  
 </body>
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2023 GeekStore. Todos os direitos reservados.</p>
-    <p>Desenvolvido por [Seu Nome]</p>
+<footer class="footer text-center">
+    <div class="container">
+        <h5>GeekStore</h5>
+        <p>&copy; 2023 GeekStore. Todos os direitos reservados.</p>
+        <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
+                href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
+                href="acessorios.html">Acessórios</a></p>
+        <p>Desenvolvido por Lucas</p>
+    </div>
+    </div>
+    <div class="container mt-2 pt-22">
+        <p text-muted>Siga-nos nas redes sociais</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
+                    class="bi bi-instagram"></i></a>
+            <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
+        </div>
+    </div>
+   
+</footer>
 </html>
