--- a/menu.html
+++ b/menu.html
@@ -1,48 +1,58 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">GeekStore</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-            aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
+    <div class="container">
+        <a class="navbar-brand fw-bold fs-3" href="index.html">GeekStore</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+            aria-controls="navbarContent" aria-expanded="false" aria-label="Alternar navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-            aria-labelledby="offcanvasDarkNavbarLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">GeekStore</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="produtosDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Produtos
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="produtosDropdown">
+                        <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
+                        <li><a class="dropdown-item" href="funkopop.html">Funko Pop</a></li>
+                        <li><a class="dropdown-item" href="gamers.html">Gamers</a></li>
+                        <li><a class="dropdown-item" href="acessorios.html">Acessórios</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="parcerias.html">Parcerias</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="carrinho.html">
+                        <i class="bi bi-cart-fill"></i> Carrinho
+                    </a>
+                </li>
+
+            </ul>
+
+            <form class="d-flex" role="search"
+                onsubmit="event.preventDefault(); alert('Pesquisar: ' + this.querySelector('input').value)">
+                <input class="form-control form-control-sm me-2" type="search" placeholder="Pesquisar"
+                    aria-label="Pesquisar">
+                <button class="btn btn-outline-success btn-sm" type="submit">Buscar</button>
+            </form>
+
+
+            <!-- Ícones de carrinho e login -->
+            <div class="d-flex">
+                <a href="login.html" class="btn btn-outline-secondary">
+                    <i class="bi bi-person"></i>
+                </a>
             </div>
-            <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="parcerias.html">Parcerias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="carrinho.html"><i class="bi bi-cart"></i> Carrinho</a>
-                    </li>
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Produtos
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="camisetas.html">Camisetas</a></li>
-                                <li><a class="dropdown-item" href="funkopop.html">Funko pop</a></li>
-                                <li><a class="dropdown-item" href="gamers.html">gamers</a></li>
-                                <li><a class="dropdown-item" href="acessorios.html">acessórios</a></li>
-                            </ul>
-                        </li>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-                        </form>
-                    </li>
-                </ul>
-            </div>
+
         </div>
     </div>
 </nav>
