--- a/parcerias.html
+++ b/parcerias.html
@@ -127,19 +127,43 @@
       </div>
     </section>
   </main>
+    <!-- Adicione isso antes da tag </body> -->
+<div vw class="enabled">
+  <div vw-access-button class="active"></div>
+  <div vw-plugin-wrapper>
+    <div class="vw-plugin-top-wrapper"></div>
+  </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+  new window.VLibras.Widget('https://vlibras.gov.br/app');
+</script>
 
-  <!-- Rodapé -->
-  <footer class="bg-dark text-white text-center py-4 mt-5">
-    <div class="container">
-      <p class="mb-1">&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-      <p class="mb-0">
-        <a href="https://www.instagram.com/" target="_blank" class="text-white me-2">Instagram</a> |
-        <a href="https://www.tiktok.com/" target="_blank" class="text-white ms-2">TikTok</a>
-      </p>
-    </div>
-  </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<footer class="footer text-center">
+    <div class="container">
+        <h5>GeekStore</h5>
+        <p>&copy; 2023 GeekStore. Todos os direitos reservados.</p>
+        <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
+                href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
+                href="acessorios.html">Acessórios</a></p>
+        <p>Desenvolvido por Lucas</p>
+    </div>
+    </div>
+    <div class="container mt-2 pt-22">
+        <p text-muted>Siga-nos nas redes sociais</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
+                    class="bi bi-instagram"></i></a>
+            <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
+        </div>
+    </div>
+   
+</footer>
 
 </html>
